# cc-advanced-training

./: .gitignore  CLAUDE.md  README.md  claude-code-advanced-training.pptx  justfile
.claude/: settings.json
.claude/commands/: install_plugins.md  prime-tic-tac-toe.md  prime_commands.md
.claude/skills/install/: SKILL.md
.claude/skills/install/evals/: evals.json
.claude/skills/install/scripts/: install.ps1  install.sh
docs/superpowers/plans/: 2026-03-26-tic-tac-toe-rust-ts.md
docs/superpowers/specs/: 2026-03-26-tic-tac-toe-rust-ts-design.md
scripts/: start-rust-ttt.sh
tic-tac-toe/: .gitignore
tic-tac-toe/client/: index.html  package-lock.json  package.json  vite.config.ts
tic-tac-toe/client/src/: api.ts  main.ts  style.css
tic-tac-toe/server/: Cargo.toml
tic-tac-toe/server/src/: game.rs  main.rs  routes.rs
